tests/neg/preview-non-viral/usage_2.scala
def usePreviewFeatureTransitively = usePreviewFeature
def usePreviewFeatureDirectly = previewFeature // error

@scala.annotation.preview 
def wrappedPreviewFeature = previewFeature